Fix modal position on mobile

--- a/resources/styles/_antd-tweaks.less
+++ b/resources/styles/_antd-tweaks.less
@@ -128,6 +128,10 @@
 }
 
 .ant-modal {
+
+  @media (max-width: @screen-md) {
+    margin: 0 auto;
+  }
   .ant-modal-confirm-body {
     .anticon {
       color: @primary-color;
